// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Track can omit any side panel 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

.c6 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
}

<div>
  <div
    class="c0"
    style="width: 1200px;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="width: 890px; margin-left: 200px; margin-right: 110px;"
      >
        <div
          style="width: 890px;"
        >
          Top panel says "
          Top label as in a heading or such
          "
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
          style="width: 200px;"
        >
          <div
            class="c5"
          >
            <span />
          </div>
        </div>
        <div
          class="c6"
          style="width: 890px;"
        >
          <div
            style="width: 890px;"
          >
            Greetings from main body of the track. "
            Right here in the center
            "
            <ul>
              <li>
                leftPanelWidth: 
                200
              </li>
              <li>
                Regions: 
                [{"start":123,"stop":456}]
              </li>
              <li>
                rightPanelWidth: 
                110
              </li>
              <li>
                scalePosition: 
                71.94610778443113
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c4"
          style="width: 110px;"
        >
          <div
            style="width: 110px;"
          >
            Right panel says "
            I am on the right
            "
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Track can omit any side panel 2`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.c3 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

<div>
  <div
    class="c0"
    style="width: 1200px;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          style="width: 200px;"
        >
          <div
            style="width: 200px;"
          >
            Left panel says "
            I am on the left
            "
          </div>
        </div>
        <div
          class="c4"
          style="width: 890px;"
        >
          <div
            style="width: 890px;"
          >
            Greetings from main body of the track. "
            Right here in the center
            "
            <ul>
              <li>
                leftPanelWidth: 
                200
              </li>
              <li>
                Regions: 
                [{"start":123,"stop":456}]
              </li>
              <li>
                rightPanelWidth: 
                110
              </li>
              <li>
                scalePosition: 
                71.94610778443113
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c3"
          style="width: 110px;"
        >
          <div
            style="width: 110px;"
          >
            Right panel says "
            I am on the right
            "
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Track can omit any side panel 3`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

<div>
  <div
    class="c0"
    style="width: 1200px;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="width: 890px; margin-left: 200px; margin-right: 110px;"
      >
        <div
          style="width: 890px;"
        >
          Top panel says "
          Top label as in a heading or such
          "
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
          style="width: 200px;"
        >
          <div
            style="width: 200px;"
          >
            Left panel says "
            I am on the left
            "
          </div>
        </div>
        <div
          class="c5"
          style="width: 890px;"
        >
          <div
            style="width: 890px;"
          >
            Greetings from main body of the track. "
            Right here in the center
            "
            <ul>
              <li>
                leftPanelWidth: 
                200
              </li>
              <li>
                Regions: 
                [{"start":123,"stop":456}]
              </li>
              <li>
                rightPanelWidth: 
                110
              </li>
              <li>
                scalePosition: 
                71.94610778443113
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Track has no unexpected changes 1`] = `
.c0 {
  display: flex;
  flex-direction: column;
}

.c1 {
  display: flex;
  flex-direction: column;
}

.c3 {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.c2 {
  display: flex;
}

.c4 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  flex-shrink: 0;
  flex-direction: column;
}

<div>
  <div
    class="c0"
    style="width: 1200px;"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        style="width: 890px; margin-left: 200px; margin-right: 110px;"
      >
        <div
          style="width: 890px;"
        >
          Top panel says "
          Top label as in a heading or such
          "
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
          style="width: 200px;"
        >
          <div
            style="width: 200px;"
          >
            Left panel says "
            I am on the left
            "
          </div>
        </div>
        <div
          class="c5"
          style="width: 890px;"
        >
          <div
            style="width: 890px;"
          >
            Greetings from main body of the track. "
            Right here in the center
            "
            <ul>
              <li>
                leftPanelWidth: 
                200
              </li>
              <li>
                Regions: 
                [{"start":123,"stop":456}]
              </li>
              <li>
                rightPanelWidth: 
                110
              </li>
              <li>
                scalePosition: 
                71.94610778443113
              </li>
            </ul>
          </div>
        </div>
        <div
          class="c4"
          style="width: 110px;"
        >
          <div
            style="width: 110px;"
          >
            Right panel says "
            I am on the right
            "
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
